--- a/Java/a smarter way to learn Js/swap images & setting classes/index.html
+++ b/Java/a smarter way to learn Js/swap images & setting classes/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="./script.js">
 
 </head>
 
@@ -13,7 +14,7 @@
 
 
 
-  <img src="./logo.jpg" width="200px" height="200px" id="logo" onClick="ChangeIt()" style="cursor: pointer;">
+  <!-- <img src="./logo.jpg" width="200px" height="200px" id="logo" onClick="ChangeIt()" style="cursor: pointer;">
   <img src="./office.jpg" width="200px" height="200px" id="office" onclick="hideIt()" style="cursor: pointer;">
 
 
@@ -30,7 +31,7 @@
       
     }
 
-  </script>
+  </script> -->
 
 
 </body>
