--- a/Java/a smarter way to learn Js/Swap Image/index.html
+++ b/Java/a smarter way to learn Js/Swap Image/index.html
@@ -6,13 +6,33 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="./sea.jpg " width="250px" height="250px" onMouseOver="src='./office.jpg'">
-    <img src="./office.jpg" width="250px" height="250px" id="before" onmouseover="swapPic();">
-   
+    <!-- <img src="./sea.jpg " width="250px" height="250px" id="before" onMouseOver="src='./office.jpg';"> -->
+    <!-- <img src="./office.jpg" width="250px" height="250px" id="after" onmouseover="swapPic();">
+     -->
+<!--     
     <script>
+        var x=0;
     function swapPic(){
-        document.getElementById("before").src="./sea.jpg";
+        if(x==0){
+            document.getElementById("before").src = "./sea.jpg";
+            x++
+        }
+        else{
+            document.getElementById("after").src="./sea.jpg";
+            x=0
+        }
+    } 
+
+</script> -->
+
+<img src="./sea.jpg " width="250px" height="250px" id="before" onMouseOver="src=swapPic();">
+<script>
+    function swapPic(){
+var pic= document.getElementById('before').src="./office.jpg"
+
+
     }
 </script>
+
 </body>
 </html>
