--- a/Complete JavaScript/Yahoo Baba jS/nested loop examples/index.html
+++ b/Complete JavaScript/Yahoo Baba jS/nested loop examples/index.html
@@ -7,37 +7,37 @@
 </head>
 <body>
     <script>
-        //  1st example
-        // for(var a=1;a<=5;a++){
-        //     for(var b=1;b<=a; b++){
-        //         document.write(b)
-        //     }
-        //     document.write("<br>") 
-        // }
+         // 1st example
+        for(var a=1;a<=5;a++){
+            for(var b=1;b<=a; b++){
+                document.write(b)
+            }
+            document.write("<br>"  )
+        }
         
-        // document.write("<br>")
+        document.write("<br>")
 
 
         //  2nd example
-        // for(var c=1;c<=5;c++){
-        //     for(var d=1; d<=c;d++){
-        //         document.write(c)
-        //     }
+        for(var c=1;c<=5;c++){
+            for(var d=1; d<=c;d++){
+                document.write(c)
+            }
 
-        //     document.write("<br>")
+            document.write("<br>")
 
-        // }
-        // document.write("<br>")
+        }
+        document.write("<br>")
 
           //  3rd example 
 
-        // for(var e=5;e>=1;e--){
-        //     for (var f=1; f<=e;f++) {
-        //         document.write(e )
-        //     }
-        //     document.write("<br>")
-        // }
-        // document.write("<br>")
+        for(var e=5;e>=1;e--){
+            for (var f=1; f<=e;f++) {
+                document.write(e )
+            }
+            document.write("<br>")
+        }
+        document.write("<br>")
 
           //  4th example 
 
