modify & remove array element

--- a/Complete JavaScript/Yahoo Baba jS/34 array ii methode/index.html
+++ b/Complete JavaScript/Yahoo Baba jS/34 array ii methode/index.html
@@ -11,11 +11,9 @@
            var ary=new Array(); // constructor methode
      
            document.write('<ul>');
-    // for (var g=0; g<5; g++){
-    //      ary[g]= prompt("Enter The Value : ");
-    //} 
-
-   
+     for (var g=0; g<5; g++){
+          ary[g]= prompt("Enter The Value : ");
+    } 
 
      for(var a=0; a<5; a++){
      
