--- a/JS Assignments/pics short practice/Javascript Strings/index.html
+++ b/JS Assignments/pics short practice/Javascript Strings/index.html
@@ -7,18 +7,21 @@
 </head>
 <body>
     <script>
-        var abc = "abcdefghijklmnopqrstuvwxyz";
-        document.write(abc +"<br>");
-        var esc = 'i don\'t \n know\n hey!'; // \n new line
-        document.write(esc +"<br>");
-        var len=abc.length; // string length
-        document.write(len + "<br>")
-        var abc=abc.indexOf('mno')
-        document.write(abc);
+        // var abc = "abcdefghijklmnopqrstuvwxyz";
+        // document.write(abc +"<br>");
+        // var esc = 'i don\'t \n know\n hey!'; // \n new line
+        // document.write(esc +"<br>");
+        // var len=abc.length; // string length
+        // document.write(len + "<br>")
+        // var abc=abc.indexOf('mno')
+        // document.write(abc);
         // var abc=abc.lastIndexOf("lmno"); // last occurance
         // document.write(abc);// no work
-        
-        console.log(abc.slice()); // no work
+        var abc=("avbdfdfd")
+        function slice(){
+        console.log(abc.slice(1,4)); // no work
+            
+        }
 
         // var ababc.toUpperCase();
         // document.write(abc);
