--- a/Complete JavaScript/Yahoo Baba jS/modify & remove array element/index.html
+++ b/Complete JavaScript/Yahoo Baba jS/modify & remove array element/index.html
@@ -10,14 +10,15 @@
        var a= ["herry", 18, "male", "eng"];
        document.write(a + "<br>") ;
        delete a[1];
-       a[0]= "sunny",
+       a[2]= 'female';
        document.write(a  + "<br>");
-       a[1]= 20;
-       document.write(a  + "<br>");
-       delete a[1]; // 
-       document.write(a  + "<br>");
+       document.write(a [1] + "<br>");
+    
+    //    document.write(a  + "<br>");
+    //     // 
+    //    document.write(a  + "<br>");
 
-       document.write(a[1]  + "<br>");
+    //    document.write(a[1]  + "<br>");
     </script>
 </body>
 </html>
