--- a/class 07-07-24/index.html
+++ b/class 07-07-24/index.html
@@ -4,15 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
+    <script src="./script.js"></script>
 </head>
 <body>
-    <script>
-        for( var a =1  ; a<=40 ; a++)
-        if( a % 2==0){
-            document.write(a + " ")
-        }
-    </script> 
     
 </body>
 </html>
